[gd_scene load_steps=21 format=3 uid="uid://cp4kl2mwytpqr"]

[ext_resource type="Script" path="res://enemies/first_miniboss.gd" id="1_hqrk6"]
[ext_resource type="Script" path="res://enemies/enemy_hurtbox.gd" id="1_qwvcv"]
[ext_resource type="Script" path="res://hitbox.gd" id="2_dh1eu"]
[ext_resource type="PackedScene" uid="uid://g4kirqxgep2" path="res://glb_inherited_scenes/big_melee_t1.tscn" id="3_a32lo"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_llq2q"]
height = 6.0
radius = 2.0

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_un6fu"]
radius = 2.0
height = 6.0

[sub_resource type="Animation" id="Animation_r51hv"]
resource_name = "big_overhead"
length = 1.6
step = 0.0166667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MeleeHitboxPivot:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(2.08165e-12, 2.08165e-12, 2.08165e-12)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MeleeHitboxPivot:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.750001, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(3.48787e-16, 3.48787e-16, 3.48787e-16), Vector3(-1.74533, 3.48787e-16, 3.48787e-16)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MeleeHitboxPivot:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(2, 2, 2)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("MeleeHitboxPivot:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1.6),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("MeleeHitboxPivot:process_mode")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 1.6),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 4]
}
tracks/5/type = "position_3d"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("MeleeHitboxPivot/EnemyHitbox")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = PackedFloat32Array(0, 1, 2.08165e-12, -0.5, 2.08165e-12, 0.133334, 1, 2.08165e-12, 4, 2.08165e-12)
tracks/6/type = "method"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath(".")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(1, 1.6),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"shoot_fast_bullet"
}, {
"args": [],
"method": &"end_attack"
}]
}
tracks/7/type = "method"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath(".")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"stop_aiming_at_target"
}]
}

[sub_resource type="Animation" id="Animation_c5n8h"]
resource_name = "big_sweep"
length = 1.61667
step = 0.0166667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MeleeHitboxPivot:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(2.08165e-12, -1, 2.08165e-12)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MeleeHitboxPivot:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.766667, 1.16667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(-1.5708, 3.48787e-16, 2.0944), Vector3(-1.5708, 3.48787e-16, 2.0944), Vector3(-1.5708, 3.48787e-16, -2.0944)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MeleeHitboxPivot:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(2, 2, 2)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("MeleeHitboxPivot:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1.61667),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("MeleeHitboxPivot:process_mode")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 1.61667),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 4]
}
tracks/5/type = "method"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath(".")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0.966667),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"stop_aiming_at_target"
}]
}
tracks/6/type = "method"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath(".")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0.966667, 1.61667),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"shoot_bullet"
}, {
"args": [],
"method": &"end_attack"
}]
}
tracks/7/type = "position_3d"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("MeleeHitboxPivot/EnemyHitbox")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = PackedFloat32Array(0, 1, 2.08165e-12, 2.08165e-12, 2.08165e-12, 0.2, 1, 2.08165e-12, 4, 2.08165e-12)

[sub_resource type="Animation" id="Animation_ufqy8"]
resource_name = "overhead"
length = 1.1
step = 0.0166667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MeleeHitboxPivot:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.133333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(2.08165e-12, -3, 2.08165e-12), Vector3(2.08165e-12, 0.15, 2.08165e-12)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MeleeHitboxPivot:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.5, 0.633333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(3.48787e-16, 3.48787e-16, 3.48787e-16), Vector3(-1.74533, 3.48787e-16, 3.48787e-16)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MeleeHitboxPivot:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("MeleeHitboxPivot:process_mode")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 4]
}
tracks/4/type = "method"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"stop_aiming_at_target"
}]
}

[sub_resource type="Animation" id="Animation_queae"]
resource_name = "sweep"
length = 1.5
step = 0.0166667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MeleeHitboxPivot:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(1.75, 2.08165e-12, -0.75), Vector3(2.08165e-12, 2.08165e-12, 2.08165e-12)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MeleeHitboxPivot:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.766667, 0.966667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(-1.5708, 3.48787e-16, 2.0944), Vector3(-1.5708, 3.48787e-16, 2.0944), Vector3(-1.5708, 3.48787e-16, -2.0944)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MeleeHitboxPivot:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("MeleeHitboxPivot:process_mode")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 4]
}
tracks/4/type = "method"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.766667),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"stop_aiming_at_target"
}]
}

[sub_resource type="Animation" id="Animation_wqamy"]
resource_name = "double_sweep"
length = 2.86667
step = 0.0166667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MeleeHitboxPivot:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(2.08165e-12, -1, 2.08165e-12)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MeleeHitboxPivot:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.766668, 1.16667, 2.06667, 2.46667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(-1.5708, 3.48787e-16, 2.0944), Vector3(-1.5708, 3.48787e-16, 2.0944), Vector3(-1.5708, 3.48787e-16, -2.0944), Vector3(-1.5708, 3.48787e-16, -2.0944), Vector3(-1.5708, 3.48787e-16, 2.0944)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MeleeHitboxPivot:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.766668, 1.16667, 2.06667, 2.46667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(2, 2, 2), Vector3(2, 2, 2), Vector3(2.5, 2.5, 2.5), Vector3(2.5, 2.5, 2.5), Vector3(3, 3, 3)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("MeleeHitboxPivot:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 2.86667),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("MeleeHitboxPivot:process_mode")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 2.86667),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 4]
}
tracks/5/type = "method"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath(".")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(2.26667, 2.86667),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"stop_aiming_at_target"
}, {
"args": [],
"method": &"end_attack"
}]
}
tracks/6/type = "position_3d"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("MeleeHitboxPivot/EnemyHitbox")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = PackedFloat32Array(0, 1, 2.08165e-12, 2.08165e-12, 2.08165e-12, 0.2, 1, 2.08165e-12, 4, 2.08165e-12)
tracks/7/type = "method"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath(".")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0.966668, 2.26667),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"shoot_bullet"
}, {
"args": [],
"method": &"shoot_bullet"
}]
}

[sub_resource type="Animation" id="Animation_k8rbk"]
resource_name = "flying_sweep"
length = 2.0
step = 0.0166667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MeleeHitboxPivot:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(2.08165e-12, -1, 2.08165e-12)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MeleeHitboxPivot:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.766667, 1.38333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(-1.20428, -2.61799, 0.523599), Vector3(-1.20428, -2.61799, 0.523599), Vector3(-1.5708, 4.18879, -2.0944)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MeleeHitboxPivot:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(2, 2, 2)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("MeleeHitboxPivot:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("MeleeHitboxPivot:process_mode")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 4]
}
tracks/5/type = "method"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath(".")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.766667, 1.08333),
"transitions": PackedFloat32Array(1, 1, 1),
"values": [{
"args": [],
"method": &"start_flying_sweep"
}, {
"args": [],
"method": &"flying_sweep_rush"
}, {
"args": [],
"method": &"stop_aiming_at_target"
}]
}
tracks/6/type = "method"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath(".")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(1.08333, 2),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"shoot_bullet"
}, {
"args": [],
"method": &"end_attack"
}]
}
tracks/7/type = "position_3d"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("MeleeHitboxPivot/EnemyHitbox")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = PackedFloat32Array(0, 1, 2.08165e-12, 2.08165e-12, 2.08165e-12, 0.2, 1, 2.08165e-12, 4, 2.08165e-12)

[sub_resource type="Animation" id="Animation_fel40"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MeleeHitboxPivot:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-0.710101, 0.979634, 0.936083)]
}

[sub_resource type="Animation" id="Animation_sejrl"]
resource_name = "triple_shot_sweep"
length = 1.61667
step = 0.0166667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MeleeHitboxPivot:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(2.08165e-12, -1, 2.08165e-12)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MeleeHitboxPivot:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.766667, 1.16667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(-1.5708, 3.48787e-16, 2.0944), Vector3(-1.5708, 3.48787e-16, 2.0944), Vector3(-1.5708, 3.48787e-16, -2.0944)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MeleeHitboxPivot:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(2, 2, 2)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("MeleeHitboxPivot:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1.61667),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("MeleeHitboxPivot:process_mode")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 1.61667),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 4]
}
tracks/5/type = "method"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath(".")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0.966667),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"stop_aiming_at_target"
}]
}
tracks/6/type = "method"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath(".")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0.966667, 1.61667),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"shoot_triple_shot"
}, {
"args": [],
"method": &"end_attack"
}]
}
tracks/7/type = "position_3d"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("MeleeHitboxPivot/EnemyHitbox")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = PackedFloat32Array(0, 1, 2.08165e-12, 2.08165e-12, 2.08165e-12, 0.2, 1, 2.08165e-12, 4, 2.08165e-12)

[sub_resource type="AnimationLibrary" id="AnimationLibrary_o2h33"]
_data = {
"RESET": SubResource("Animation_fel40"),
"big_overhead": SubResource("Animation_r51hv"),
"big_sweep": SubResource("Animation_c5n8h"),
"double_sweep": SubResource("Animation_wqamy"),
"flying_sweep": SubResource("Animation_k8rbk"),
"overhead": SubResource("Animation_ufqy8"),
"sweep": SubResource("Animation_queae"),
"triple_shot_sweep": SubResource("Animation_sejrl")
}

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_henf5"]
resource_local_to_scene = true
radius = 0.3
height = 5.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_al1tw"]
shading_mode = 0
albedo_color = Color(1, 1, 0, 1)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_l85qd"]
resource_local_to_scene = true
material = SubResource("StandardMaterial3D_al1tw")
radius = 0.3
height = 5.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_fo8ei"]
shading_mode = 0
albedo_color = Color(0, 0, 0, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_o4pv6"]
albedo_color = Color(0.121569, 0.121569, 0.121569, 1)

[node name="FirstMiniboss" type="CharacterBody3D"]
collision_layer = 2
collision_mask = 90
script = ExtResource("1_hqrk6")
target_distance = 10.0
follow_turn_speed = 0.15
fast_bullet_speed = 60.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CylinderShape3D_llq2q")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]
path_desired_distance = 3.0
target_desired_distance = 9.0
avoidance_enabled = true
height = 6.0
radius = 6.0

[node name="EnemyHurtbox" type="Area3D" parent="."]
collision_layer = 8
collision_mask = 9
script = ExtResource("1_qwvcv")
health = 77
enemy_hitboxes = ["PlayerHitbox"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="EnemyHurtbox"]
shape = SubResource("CapsuleShape3D_un6fu")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_o2h33")
}

[node name="MeleeHitboxPivot" type="Node3D" parent="."]
transform = Transform3D(-0.210788, -1.53946, 1.25922, 1.22122, 0.899258, 1.30382, -1.56977, 0.906308, 0.845237, 2.08165e-12, 2.08165e-12, 2.08165e-12)

[node name="EnemyHitbox" type="Area3D" parent="MeleeHitboxPivot"]
transform = Transform3D(0.999999, 2.15301e-08, -2.2719e-14, -8.9407e-08, 0.999999, 0, -6.17927e-15, -6.2758e-15, 0.999999, 2.08165e-12, 4, 2.08165e-12)
collision_layer = 8
collision_mask = 11
script = ExtResource("2_dh1eu")

[node name="HitboxCollider" type="CollisionShape3D" parent="MeleeHitboxPivot/EnemyHitbox"]
shape = SubResource("CapsuleShape3D_henf5")

[node name="MeshInstance3D" type="MeshInstance3D" parent="MeleeHitboxPivot/EnemyHitbox"]
transform = Transform3D(1, -1.62572e-08, -4.69464e-15, -4.73391e-08, 1, -3.90864e-15, 2.95455e-14, -2.14339e-14, 0.999999, 2.08165e-12, 2.08165e-12, 2.08165e-12)
mesh = SubResource("CapsuleMesh_l85qd")

[node name="VisualMesh" parent="." instance=ExtResource("3_a32lo")]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 0)

[node name="BigMeleeT12" parent="VisualMesh" index="0"]
surface_material_override/1 = SubResource("StandardMaterial3D_fo8ei")
surface_material_override/3 = SubResource("StandardMaterial3D_o4pv6")

[connection signal="target_reached" from="NavigationAgent3D" to="." method="_on_navigation_agent_3d_target_reached"]
[connection signal="velocity_computed" from="NavigationAgent3D" to="." method="_on_navigation_agent_3d_velocity_computed"]

[editable path="VisualMesh"]
